End of new pizza

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,8 @@ a {
   color: inherit;
 }
 
-ul {
+ul,
+nav {
   list-style-type: none;
 }
 
@@ -36,8 +37,11 @@ html {
 }
 
 .main {
+  background: linear-gradient(to bottom, white, 90%, #a6876f, 99.9%, #a6876f);
+}
+.main .container {
   display: flex;
-  height: 70ch;
+  height: 74ch;
 }
 .main__block {
   width: 50%;
@@ -47,12 +51,16 @@ html {
   text-align: center;
 }
 .main__block img {
-  width: 500px;
+  max-width: 500px;
+  width: 100%;
   margin-bottom: 50px;
+  filter: hue-rotate(45deg);
+  filter: sepia(0.7);
 }
 .main__block p {
-  width: 500px;
-  color: #991923;
+  max-width: 500px;
+  width: 100%;
+  color: #a6876f;
   font-size: 20px;
 }
 .main .right {
@@ -61,6 +69,140 @@ html {
 }
 
 .menu {
-  height: 500px;
-  background-color: coral;
+  background-color: #a6876f;
+  position: relative;
+}
+.menu__nav {
+  position: sticky;
+  z-index: 999;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 1300px;
+  background-color: #a6876f;
+  align-items: baseline;
+  color: white;
+  padding: 20px 0 20px;
+}
+.menu__nav--title {
+  font-size: 24px;
+  text-transform: uppercase;
+}
+.menu__nav h1 {
+  font-size: 30px;
+  text-transform: uppercase;
+  position: relative;
+}
+.menu__nav h1 span {
+  position: absolute;
+  top: -5px;
+  width: 100%;
+  font-size: 15px;
+  left: 50%;
+  transform: translate(-35%, -50%);
+}
+.menu__nav h1 a:hover {
+  text-decoration: underline;
+}
+.menu__nav--list {
+  display: flex;
+  justify-content: space-between;
+  max-width: 700px;
+  width: 100%;
+}
+.menu__nav--list .list--link {
+  margin-left: 10px;
+  font-size: 20px;
+}
+.menu__nav--list .list--link:hover {
+  text-decoration: underline;
+}
+.menu .container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.menu__box {
+  background-color: white;
+  margin: 20px;
+  padding: 20px;
+  max-width: 280px;
+  width: 100%;
+  border-radius: 20px;
+  color: #a6876f;
+  box-shadow: 0px 0px 26px -1px #6a3d34;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.menu__box--new {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  padding: 5px 10px;
+  background-color: red;
+  color: white;
+  font-weight: 900;
+  font-size: 20px;
+  border-radius: 20px 0 20px 0;
+  animation: rotate 2s infinite 0ms linear;
+}
+.menu__box img {
+  width: 240px;
+  height: 240px;
+}
+.menu__box p {
+  width: 100%;
+  margin: 20px 0;
+}
+.menu__box--numbers {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-self: baseline;
+}
+.menu__box--numbers span {
+  width: 50%;
+}
+.menu__box--numbers span:nth-child(odd) {
+  font-weight: 900;
+  padding: 5px;
+  border: 2px solid #a6876f;
+  border-radius: 50px;
+  text-align: center;
+}
+.menu__box--numbers span:nth-child(odd):hover {
+  background-color: #a6876f;
+  color: white;
+}
+.menu__box--numbers span:nth-child(even) {
+  text-align: end;
+  padding: 5px 0;
+}
+.menu__category {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  margin: 40px 0;
+  padding: 0 20px;
+  color: white;
+  align-items: center;
+  font-size: 40px;
+}
+.menu__category hr {
+  width: 40%;
+  height: 4px;
+  background: white;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotateY(0deg);
+  }
+  20% {
+    transform: rotateY(360deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
 }/*# sourceMappingURL=main.css.map */
