--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,9 @@
+$main__color: #a6876f;
+$contrast__color: white;
+$logo__color: #6a3d34;
+// $logo__font: https://www.fontsquirrel.com/fonts/carrois-gothic;
+// $main__color: white;
+// $contrast__color: #a6876f;
 * {
   padding: 0;
   margin: 0;
@@ -19,12 +25,13 @@ a {
   color: inherit;
 }
 
-ul {
+ul,
+nav {
   list-style-type: none;
 }
 
 html {
-  background-color: white;
+  background-color: $contrast__color;
   overflow-x: hidden;
   font-family: "Roboto Slab", serif;
 }
@@ -34,10 +41,19 @@ html {
   width: 100%;
   margin: auto;
 }
-
 .main {
-  display: flex;
-  height: 70ch;
+  background: linear-gradient(
+    to bottom,
+    white,
+    90%,
+    $main__color,
+    99.9%,
+    $main__color
+  );
+  .container {
+    display: flex;
+    height: 74ch;
+  }
   &__block {
     width: 50%;
     display: flex;
@@ -45,12 +61,17 @@ html {
     justify-content: center;
     text-align: center;
     img {
-      width: 500px;
+      max-width: 500px;
+      width: 100%;
       margin-bottom: 50px;
+      // развлекаемся с лого
+      filter: hue-rotate(45deg);
+      filter: sepia(0.7);
     }
     p {
-      width: 500px;
-      color: #991923;
+      max-width: 500px;
+      width: 100%;
+      color: $main__color;
       font-size: 20px;
     }
   }
@@ -61,6 +82,144 @@ html {
 }
 
 .menu {
-  height: 500px;
-  background-color: coral;
+  // background-image: url(../img/fone__v2.png);
+  // background-position: top;
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  background-color: $main__color;
+  position: relative;
+  &__nav {
+    position: sticky;
+    z-index: 999;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    width: 1300px;
+    background-color: $main__color;
+    align-items: baseline;
+    color: $contrast__color;
+    padding: 20px 0 20px;
+    &--title {
+      // схуяли блять не работает
+      font-size: 24px;
+      text-transform: uppercase;
+    }
+    h1 {
+      font-size: 30px;
+      text-transform: uppercase;
+      position: relative;
+      span {
+        position: absolute;
+        top: -5px;
+        width: 100%;
+        font-size: 15px;
+        left: 50%;
+        transform: translate(-35%, -50%);
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+    }
+    &--list {
+      display: flex;
+      justify-content: space-between;
+      max-width: 700px;
+      width: 100%;
+      .list--link {
+        margin-left: 10px;
+        font-size: 20px;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  &__box {
+    background-color: $contrast__color;
+    margin: 20px;
+    padding: 20px;
+    max-width: 280px;
+    width: 100%;
+    border-radius: 20px;
+    color: $main__color;
+    box-shadow: 0px 0px 26px -1px $logo__color;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    &--new {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      padding: 5px 10px;
+      background-color: red;
+      color: white;
+      font-weight: 900;
+      font-size: 20px;
+      border-radius: 20px 0 20px 0;
+      animation: rotate 2s infinite 0ms linear;
+    }
+    img {
+      width: 240px;
+      height: 240px;
+    }
+    p {
+      width: 100%;
+      margin: 20px 0;
+    }
+    &--numbers {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-self: baseline;
+      span {
+        width: 50%;
+        &:nth-child(odd) {
+          font-weight: 900;
+          padding: 5px;
+          border: 2px solid $main__color;
+          border-radius: 50px;
+          text-align: center;
+          &:hover {
+            background-color: $main__color;
+            color: $contrast__color;
+          }
+        }
+        &:nth-child(even) {
+          text-align: end;
+          padding: 5px 0;
+        }
+      }
+    }
+  }
+  &__category {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    margin: 40px 0;
+    padding: 0 20px;
+    color: $contrast__color;
+    align-items: center;
+    font-size: 40px;
+    hr {
+      width: 40%;
+      height: 4px;
+      background: $contrast__color;
+    }
+  }
+}
+@keyframes rotate {
+  0% {
+    transform: rotateY(0deg);
+  }
+  20% {
+    transform: rotateY(360deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
 }
