--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import url(./keyframes.css);
 * {
   padding: 0;
   margin: 0;
@@ -34,13 +35,13 @@ html {
   max-width: 1300px;
   width: 100%;
   margin: auto;
+  display: flex;
 }
 
 .main {
   background: linear-gradient(to bottom, white, 90%, #a6876f, 99.9%, #a6876f);
 }
 .main .container {
-  display: flex;
   height: 74ch;
 }
 .main__block {
@@ -50,14 +51,14 @@ html {
   justify-content: center;
   text-align: center;
 }
-.main__block img {
+.main__block--img {
   max-width: 500px;
   width: 100%;
   margin-bottom: 50px;
   filter: hue-rotate(45deg);
   filter: sepia(0.7);
 }
-.main__block p {
+.main__block--text {
   max-width: 500px;
   width: 100%;
   color: #a6876f;
@@ -72,28 +73,30 @@ html {
   background-color: #a6876f;
   position: relative;
 }
+.menu .container {
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 .menu__nav {
   position: sticky;
   z-index: 999;
   top: 0;
+  width: 100%;
+  background-color: #a6876f;
+  color: white;
+  padding: 20px 0 10px;
+}
+.menu__nav .container {
   display: flex;
   justify-content: space-between;
-  width: 1300px;
-  background-color: #a6876f;
   align-items: baseline;
-  color: white;
-  padding: 20px 0 20px;
 }
-.menu__nav--title {
-  font-size: 24px;
-  text-transform: uppercase;
-}
-.menu__nav h1 {
+.menu__nav .delivery {
   font-size: 30px;
   text-transform: uppercase;
   position: relative;
 }
-.menu__nav h1 span {
+.menu__nav .delivery__link--caption {
   position: absolute;
   top: -5px;
   width: 100%;
@@ -101,28 +104,40 @@ html {
   left: 50%;
   transform: translate(-35%, -50%);
 }
-.menu__nav h1 a:hover {
+.menu__nav .delivery__link:hover {
   text-decoration: underline;
 }
-.menu__nav--list {
+.menu__nav .list {
   display: flex;
   justify-content: space-between;
   max-width: 700px;
   width: 100%;
 }
-.menu__nav--list .list--link {
+.menu__nav .list__link {
   margin-left: 10px;
   font-size: 20px;
 }
-.menu__nav--list .list--link:hover {
+.menu__nav .list__link:hover {
   text-decoration: underline;
 }
-.menu .container {
+.menu__category {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
+  width: 100%;
+  padding: 60px 0 10px;
+  color: white;
+  align-items: center;
+  font-size: 40px;
 }
-.menu__box {
+.menu__category--title {
+  margin: 0 50px;
+}
+.menu__category--line {
+  width: 100%;
+  height: 4px;
+  background: white;
+}
+.menu .box {
   background-color: white;
   margin: 20px;
   padding: 20px;
@@ -133,9 +148,23 @@ html {
   box-shadow: 0px 0px 26px -1px #6a3d34;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   position: relative;
 }
-.menu__box--new {
+.menu .box__wrapper {
+  display: flex;
+  flex-direction: column;
+}
+.menu .box__wrapper--img {
+  width: 240px;
+  height: 240px;
+  transition: 0.4s;
+}
+.menu .box__wrapper--title {
+  width: 100%;
+  margin: 10px 0 20px;
+}
+.menu .box__wrapper--new {
   position: absolute;
   top: 10px;
   left: 10px;
@@ -147,62 +176,31 @@ html {
   border-radius: 20px 0 20px 0;
   animation: rotate 2s infinite 0ms linear;
 }
-.menu__box img {
-  width: 240px;
-  height: 240px;
-}
-.menu__box p {
-  width: 100%;
-  margin: 20px 0;
-}
-.menu__box--numbers {
+.menu .box__numbers {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-self: baseline;
+  margin-top: 20px;
 }
-.menu__box--numbers span {
+.menu .box__numbers span {
   width: 50%;
 }
-.menu__box--numbers span:nth-child(odd) {
+.menu .box__numbers span:nth-child(odd) {
   font-weight: 900;
   padding: 5px;
   border: 2px solid #a6876f;
   border-radius: 50px;
   text-align: center;
 }
-.menu__box--numbers span:nth-child(odd):hover {
+.menu .box__numbers span:nth-child(odd):hover {
   background-color: #a6876f;
   color: white;
 }
-.menu__box--numbers span:nth-child(even) {
+.menu .box__numbers span:nth-child(even) {
   text-align: end;
   padding: 5px 0;
 }
-.menu__category {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  margin: 40px 0;
-  padding: 0 20px;
-  color: white;
-  align-items: center;
-  font-size: 40px;
-}
-.menu__category hr {
-  width: 40%;
-  height: 4px;
-  background: white;
-}
-
-@keyframes rotate {
-  0% {
-    transform: rotateY(0deg);
-  }
-  20% {
-    transform: rotateY(360deg);
-  }
-  100% {
-    transform: rotateY(360deg);
-  }
+.menu .box:hover .box__wrapper--img {
+  transform: rotateZ(30deg);
 }/*# sourceMappingURL=main.css.map */
