--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,18 @@
   box-sizing: border-box;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+span {
+  cursor: default;
+}
+
 img {
+  pointer-events: none;
   max-width: 100%;
   height: auto;
 }
@@ -212,6 +223,7 @@ html {
   color: white;
 }
 .menu .ingridients {
+  padding-bottom: 100px;
   background: white;
   color: #a6876f;
 }
@@ -230,11 +242,11 @@ html {
 .menu .ingridients__box {
   display: flex;
   justify-content: space-between;
-  max-width: 390px;
+  max-width: 400px;
   width: 100%;
-  box-shadow: 0px 0px 15px -1px #a6876f;
-  margin: 0 20px 20px;
-  padding: 10px 20px;
+  box-shadow: 0px 0px 10px -1px #a6876f;
+  margin: 0 10px 10px;
+  padding: 5px 10px;
   border-radius: 20px;
   font-size: 14px;
 }
@@ -297,14 +309,19 @@ html {
   margin-top: 20px;
 }
 .menu .lunch__wrapper .item {
+  max-width: 800px;
+  width: 100%;
   display: flex;
+  justify-content: space-between;
   padding: 10px 20px;
 }
 .menu .lunch__wrapper .item__text {
-  margin: 0px 150px 0px 0;
+  max-width: 550px;
+  padding: 0 120px 0 0;
+  width: 100%;
 }
 .menu .lunch__wrapper .item span {
-  width: 100px;
+  width: 150px;
   align-self: center;
 }
 .menu .lunch__wrapper .item:hover {
