--- a/sass/main.scss
+++ b/sass/main.scss
@@ -56,6 +56,8 @@ html {
   width: 100%;
   margin: auto;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 .main {
   background: linear-gradient(
@@ -67,9 +69,7 @@ html {
     $main__color
   );
   background-size: cover;
-  .container {
-    height: 74ch;
-  }
+  height: 74ch;
   &__block {
     width: 50%;
     display: flex;
@@ -92,152 +92,147 @@ html {
     }
   }
 }
-// ! ..............Меню.................
-.menu {
-  .container {
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  &__nav {
-    .container {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    position: sticky;
-    z-index: 999;
-    top: 0;
-    width: 100%;
-    background-color: $main__color;
-    color: $contrast__color;
-    padding: 20px 0 10px;
-    .delivery {
-      font-size: 30px;
-      text-transform: uppercase;
-      position: relative;
-      &__link {
-        &--caption {
-          position: absolute;
-          top: -5px;
-          width: 100%;
-          font-size: 15px;
-          left: 50%;
-          transform: translate(-35%, -50%);
-        }
-        &:hover {
-          text-decoration: underline;
-        }
-      }
-    }
-    .list {
-      display: flex;
-      justify-content: space-between;
-      max-width: 700px;
-      width: 100%;
-      &__link {
-        padding: 5px 20px;
-        border-radius: 20px;
-        margin-left: 10px;
-        font-size: 20px;
-        &:hover {
-          background-color: $contrast__color;
-          color: $main__color;
-          box-shadow: 0px 0px 26px -1px $logo__color;
-        }
-      }
-    }
-  }
-  &__category {
+//  ! .............. NAVIGATION .............
+.nav {
+  position: sticky;
+  z-index: 999;
+  top: 0;
+  width: 100%;
+  background-color: $main__color;
+  color: $contrast__color;
+  padding: 20px 0 10px;
+  .list {
     display: flex;
     justify-content: space-between;
+    max-width: 700px;
     width: 100%;
-    padding: 60px 0 10px;
-    color: $contrast__color;
-    align-items: center;
-    font-size: 40px;
-    &--title {
-      margin: 0 50px;
-    }
-    &--line {
-      width: 100%;
-      height: 4px;
-      background: $contrast__color;
+    &__link {
+      padding: 5px 20px;
+      border-radius: 20px;
+      margin-left: 10px;
+      font-size: 20px;
+      &:hover {
+        background-color: $contrast__color;
+        color: $main__color;
+        box-shadow: 0px 0px 26px -1px $logo__color;
+      }
     }
   }
-  .box {
-    background-color: $contrast__color;
-    margin: 20px;
-    padding: 20px;
-    max-width: 280px;
+  .delivery {
+    font-size: 30px;
+    text-transform: uppercase;
+    position: relative;
+    &__link {
+      &--caption {
+        position: absolute;
+        top: -5px;
+        width: 100%;
+        font-size: 15px;
+        left: 50%;
+        transform: translate(-35%, -50%);
+      }
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
+// !................... CATEGORY .....................
+.category {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 60px 0 10px;
+  color: $contrast__color;
+  align-items: center;
+  font-size: 40px;
+  &__title {
+    text-align: center;
+    margin: 0 50px;
+  }
+  &__line {
     width: 100%;
-    border-radius: 20px;
-    color: $main__color;
-    box-shadow: 0px 0px 26px -1px $logo__color;
+    height: 4px;
+    background: $contrast__color;
+  }
+}
+// ! .............. BOX .......................
+.box {
+  background-color: $contrast__color;
+  margin: 20px;
+  padding: 20px;
+  max-width: 280px;
+  width: 100%;
+  border-radius: 20px;
+  color: $main__color;
+  box-shadow: 0px 0px 26px -1px $logo__color;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  &__wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    position: relative;
-    &__wrapper {
-      display: flex;
-      flex-direction: column;
-      &--img {
-        width: 240px;
-        height: 240px;
-        transition: 0.4s;
-      }
-      &--title {
-        width: 100%;
-        margin: 10px 0 20px;
-      }
-      &--new {
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        padding: 5px 10px;
-        background-color: red;
-        color: white;
-        font-weight: 900;
-        font-size: 20px;
-        border-radius: 20px 0 20px 0;
-        animation: rotate 2s infinite 0ms linear;
-      }
-      &--pepper {
-        position: absolute;
-        width: 40px;
-        top: 261px;
-        left: 215px;
-      }
+    &--img {
+      width: 240px;
+      height: 240px;
+      transition: 0.4s;
     }
-    &__numbers {
+    &--title {
       width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-self: baseline;
-      margin-top: 20px;
-      span {
-        width: 50%;
-        &:nth-child(odd) {
-          font-weight: 900;
-          padding: 5px;
-          border: 2px solid $main__color;
-          border-radius: 50px;
-          text-align: center;
-          transition: 0.6s;
-        }
-        &:nth-child(even) {
-          text-align: end;
-          padding: 5px 0;
-        }
-      }
+      margin: 10px 0 20px;
     }
-    &:hover .box__wrapper--img {
-      transform: rotateZ(30deg);
+    &--new {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      padding: 5px 10px;
+      background-color: red;
+      color: white;
+      font-weight: 900;
+      font-size: 20px;
+      border-radius: 20px 0 20px 0;
+      animation: rotate 2s infinite 0ms linear;
     }
-    &:hover .box__numbers--cost {
-      background-color: $main__color;
-      color: $contrast__color;
+    &--pepper {
+      position: absolute;
+      width: 40px;
+      top: 261px;
+      left: 215px;
     }
   }
+  &__numbers {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-self: baseline;
+    margin-top: 20px;
+    span {
+      width: 50%;
+      &:nth-child(odd) {
+        font-weight: 900;
+        padding: 5px;
+        border: 2px solid $main__color;
+        border-radius: 50px;
+        text-align: center;
+        transition: 0.6s;
+      }
+      &:nth-child(even) {
+        text-align: end;
+        padding: 5px 0;
+      }
+    }
+  }
+  &:hover .box__wrapper--img {
+    transform: rotateZ(30deg);
+  }
+  &:hover .box__numbers--cost {
+    background-color: $main__color;
+    color: $contrast__color;
+  }
+}
+// !.............. PIZZA ...................
+.pizza {
   .ingridients {
     padding-bottom: 100px;
     background: $contrast__color;
@@ -246,13 +241,10 @@ html {
       justify-content: space-around;
       flex-wrap: wrap;
     }
-    &__category {
+    .category {
       color: $main__color;
       padding: 20px;
       margin-bottom: 20px;
-      &--title {
-        text-align: center;
-      }
       hr {
         max-width: 340px;
         background-color: $main__color;
@@ -305,45 +297,47 @@ html {
       }
     }
   }
-  .lunch {
-    background: $contrast__color;
+}
+// ! ............. Burger ..............
+// ! ..............LUNCH.................
+.lunch {
+  background: $contrast__color;
+  color: $main__color;
+  padding-bottom: 90px;
+  .category {
     color: $main__color;
-    padding-bottom: 90px;
-    &__category {
-      color: $main__color;
-      display: flex;
-      flex-direction: column;
-      &--line {
-        background: $main__color;
-      }
+    display: flex;
+    flex-direction: column;
+    &__line {
+      background: $main__color;
     }
-    &__wrapper {
+  }
+  &__wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    &--title {
+      margin-top: 20px;
+    }
+    .item {
+      max-width: 800px;
       width: 100%;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      &--title {
-        margin-top: 20px;
-      }
-      .item {
-        max-width: 800px;
+      justify-content: space-between;
+      padding: 10px 20px;
+      &__text {
+        max-width: 550px;
+        padding: 0 120px 0 0;
         width: 100%;
-        display: flex;
-        justify-content: space-between;
-        padding: 10px 20px;
-        &__text {
-          max-width: 550px;
-          padding: 0 120px 0 0;
-          width: 100%;
-        }
-        span {
-          width: 150px;
-          align-self: center;
-        }
-        &:hover {
-          background: rgb(251, 243, 238);
-        }
+      }
+      span {
+        width: 150px;
+        align-self: center;
+      }
+      &:hover {
+        background: rgb(251, 243, 238);
       }
     }
   }
