--- a/sass/main.scss
+++ b/sass/main.scss
@@ -299,6 +299,9 @@ html {
   }
 }
 // ! ............. Burger ..............
+.burger {
+  // HAHAHAHAHAHAHAH
+}
 // ! ..............LUNCH.................
 .lunch {
   background: $contrast__color;
