--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ nav {
 }
 
 html {
-  background-color: #a6876f;
+  background-color: white;
   overflow-x: hidden;
   font-family: "Roboto Slab", serif;
 }
@@ -56,7 +56,7 @@ html {
 }
 
 .main {
-  background: linear-gradient(180deg, white, 90%, #a6876f, 99.9%, #a6876f);
+  background: linear-gradient(180deg, white, 90%, white, 99.9%, white);
   background-size: cover;
   height: 74ch;
 }
@@ -85,8 +85,8 @@ html {
   z-index: 999;
   top: 0;
   width: 100%;
-  background-color: #a6876f;
-  color: white;
+  background-color: white;
+  color: black;
   padding: 20px 0 10px;
 }
 .nav .list {
@@ -96,15 +96,18 @@ html {
   width: 100%;
 }
 .nav .list__link {
-  padding: 5px 20px;
   border-radius: 20px;
   margin-left: 10px;
+}
+.nav .list__link a {
+  display: block;
+  padding: 5px 20px;
   font-size: 20px;
 }
 .nav .list__link:hover {
   background-color: white;
-  color: #a6876f;
-  box-shadow: 0px 0px 26px -1px #6a3d34;
+  color: black;
+  box-shadow: 6px 6px 6px 0 rgba(0, 0, 0, 0.3), -4px -4px 4px 0 rgba(255, 255, 255, 0.3);
 }
 .nav .delivery {
   font-size: 30px;
@@ -149,7 +152,7 @@ html {
   max-width: 280px;
   width: 100%;
   border-radius: 20px;
-  color: #a6876f;
+  color: black;
   box-shadow: 12px 12px 12px 0 rgba(0, 0, 0, 0.3), -8px -8px 8px 0 rgba(255, 255, 255, 0.3);
   display: flex;
   flex-direction: column;
@@ -200,7 +203,7 @@ html {
 .box__numbers span:nth-child(odd) {
   font-weight: 900;
   padding: 5px;
-  border: 2px solid #a6876f;
+  border: 2px solid white;
   border-radius: 50px;
   text-align: center;
   transition: 0.6s;
@@ -210,7 +213,7 @@ html {
   padding: 5px 0;
 }
 .box:hover .box__numbers--cost {
-  background-color: #a6876f;
+  background-color: white;
   color: white;
 }
 
@@ -223,20 +226,20 @@ html {
 .pizza .ingridients {
   padding-bottom: 100px;
   background: white;
-  color: #a6876f;
+  color: white;
 }
 .pizza .ingridients .container {
   justify-content: space-around;
   flex-wrap: wrap;
 }
 .pizza .ingridients .category {
-  color: #a6876f;
+  color: white;
   padding: 20px;
   margin-bottom: 20px;
 }
 .pizza .ingridients .category hr {
   max-width: 340px;
-  background-color: #a6876f;
+  background-color: white;
 }
 .pizza .ingridients__box {
   display: flex;
@@ -267,7 +270,7 @@ html {
 .pizza .ingridients__box .wrapper__numbers span:nth-child(odd) {
   font-weight: 700;
   padding: 3px;
-  border: 2px solid #a6876f;
+  border: 2px solid white;
   border-radius: 50px;
   text-align: center;
   transition: 0.6s;
@@ -281,7 +284,7 @@ html {
   margin-left: 20px;
 }
 .pizza .ingridients__box:hover .wrapper__numbers--cost {
-  background-color: #a6876f;
+  background-color: white;
   color: white;
 }
 
@@ -291,16 +294,16 @@ html {
 
 .lunch {
   background: white;
-  color: #a6876f;
+  color: white;
   padding-bottom: 100px;
 }
 .lunch .category {
-  color: #a6876f;
+  color: white;
   display: flex;
   flex-direction: column;
 }
 .lunch .category__line {
-  background: #a6876f;
+  background: white;
 }
 .lunch__wrapper {
   width: 100%;
@@ -345,7 +348,7 @@ html {
 
 .kitchen {
   background: white;
-  color: #a6876f;
+  color: white;
   padding-bottom: 100px;
 }
 .kitchen .container {
@@ -376,8 +379,8 @@ html {
   background: rgb(251, 243, 238);
 }
 .kitchen .category {
-  color: #a6876f;
+  color: white;
 }
 .kitchen .category__line {
-  background: #a6876f;
+  background: white;
 }/*# sourceMappingURL=main.css.map */
