--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 @import url(./keyframes.css);
-$main__color: #a6876f;
-// $main__color: #6a3d34;
+// $main__color: #a6876f;
+$main__color: white;
 // #a6876f - кофейный который
 $contrast__color: white;
 $logo__color: #6a3d34;
@@ -101,7 +101,7 @@ html {
   top: 0;
   width: 100%;
   background-color: $main__color;
-  color: $contrast__color;
+  color: black;
   padding: 20px 0 10px;
   .list {
     display: flex;
@@ -109,14 +109,18 @@ html {
     max-width: 700px;
     width: 100%;
     &__link {
-      padding: 5px 20px;
       border-radius: 20px;
       margin-left: 10px;
-      font-size: 20px;
+      a {
+        display: block;
+        padding: 5px 20px;
+        font-size: 20px;
+      }
       &:hover {
         background-color: $contrast__color;
-        color: $main__color;
-        box-shadow: 0px 0px 26px -1px $logo__color;
+        color: black;
+        box-shadow: 6px 6px 6px 0 rgba(0, 0, 0, 0.3),
+          -4px -4px 4px 0 rgba(255, 255, 255, 0.3);
       }
     }
   }
@@ -166,7 +170,7 @@ html {
   max-width: 280px;
   width: 100%;
   border-radius: 20px;
-  color: $main__color;
+  color: black;
   box-shadow: 12px 12px 12px 0 rgba(0, 0, 0, 0.3),
     -8px -8px 8px 0 rgba(255, 255, 255, 0.3);
   // 12px 12px 16px 0 rgba(255, 255, 255, 0.3) inset,
